--- a/sym_cargo.ipynb
+++ b/sym_cargo.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1bTzsC2_o8Jg772hCJWDRqrHnkqeQuRQx",
-      "authorship_tag": "ABX9TyMz+p9eGRTGV6L5T0TnjftW",
+      "authorship_tag": "ABX9TyMFbvkGvo20F1tb3RYOy1L9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,14 +32,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TRudeILZCNAh"
+        "id": "TRudeILZCNAh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7091cc3f-7ca1-40f9-ff39-2e3e8be979b7"
       },
       "source": [
         "!pip install plotly-express --quiet\n",
         "!pip install vincenty --quiet"
       ],
       "execution_count": 1,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "  Building wheel for vincenty (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -55,7 +67,7 @@
         "from sklearn.neighbors import NearestNeighbors\n",
         "import plotly_express as px"
       ],
-      "execution_count": 2,
+      "execution_count": 257,
       "outputs": []
     },
     {
@@ -67,7 +79,7 @@
         "port_file = '/content/drive/MyDrive/Ports/ports.csv'\n",
         "tracking_file = '/content/drive/MyDrive/Ports/tracking.csv'"
       ],
-      "execution_count": 3,
+      "execution_count": 94,
       "outputs": []
     },
     {
@@ -100,10 +112,9 @@
         "  df2['lat_long_1back'] = df2.groupby('vessel')['lat_long'].transform(lambda x: x.shift())   \n",
         "  \n",
         "  # months and days\n",
-        "  df2['month'] = df2['datetime'].dt.month\n",
-        "  df2['day'] = df2['datetime'].dt.day\n",
         "  df2['time_delta'] = df2.groupby('vessel')['datetime'].transform(lambda x: x.diff(1))\n",
-        "  df2['hours'] = df2.groupby('vessel')['time_delta'].transform(lambda x: [(n.seconds/3600) + (n.days *24) for n in x])\n",
+        "  df2['delta_hours'] = df2.groupby('vessel')['time_delta'].transform(lambda x: [(n.seconds/3600) + (n.days *24) for n in x])\n",
+        "  df2 = df2.drop(columns=['time_delta'])\n",
         "\n",
         "  # speed and heading back\n",
         "  df2['speed_diff_2back'] = df2.groupby('vessel')['speed'].transform(lambda x: x.diff(2))\n",
@@ -120,7 +131,7 @@
         "\n",
         "  return df1, df2"
       ],
-      "execution_count": 4,
+      "execution_count": 118,
       "outputs": []
     },
     {
@@ -131,7 +142,7 @@
       "source": [
         "df1, df2 = wrangle()"
       ],
-      "execution_count": 5,
+      "execution_count": 119,
       "outputs": []
     },
     {
@@ -148,7 +159,7 @@
         "# a dictionary to retrieve the port id from the index\n",
         "idx_ports = {idx:port for idx, port in zip(df1.index, df1.port)}"
       ],
-      "execution_count": 6,
+      "execution_count": 120,
       "outputs": []
     },
     {
@@ -158,7 +169,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "164f0bc8-46a9-4979-ef24-ad099581e0b9"
+        "outputId": "04bb570f-03eb-4c88-9630-f79271b9130c"
       },
       "source": [
         "# training a nearest neighbor model to  find the closest port when the \n",
@@ -176,7 +187,7 @@
         "print(dist[0] * 6370)\n",
         "print([idx_ports[n] for n in n[0]])"
       ],
-      "execution_count": 7,
+      "execution_count": 121,
       "outputs": [
         {
           "output_type": "stream",
@@ -207,28 +218,7 @@
         "vin_one = {f'port{a}':[vincenty(ports[a], coord_first_stop)] for a in viable_ports}\n",
         "vin_two = {f'port{a}':[vincenty(ports[a], coord_second_stop)] for a in viable_ports}"
       ],
-      "execution_count": 8,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "W3qq2ffF0IEL"
-      },
-      "source": [
-        "# there are five ports in Japan that are very close to each other. note ports\n",
-        "# 42 and 51 are the same port - they have precisely the same distances from two\n",
-        "# different docking locations.\n",
-        "\n",
-        "jports = [42, 109, 65, 51, 30]\n",
-        "\n",
-        "jc1 = (35.470100, 139.738700)    # has a predicted distance of 0.000022 from 51\n",
-        "jc2 = (35.461105, 139.718472)    # has a predicted distance of 0.000347 from 51\n",
-        "\n",
-        "jc1_dist = {f'port_{a}':[vincenty(ports[a], jc1)] for a in jports}\n",
-        "jc2_dist = {f'port_{a}':[vincenty(ports[a], jc2)] for a in jports}"
-      ],
-      "execution_count": 9,
+      "execution_count": 122,
       "outputs": []
     },
     {
@@ -252,7 +242,7 @@
         "  \n",
         "  return df_"
       ],
-      "execution_count": 10,
+      "execution_count": 101,
       "outputs": []
     },
     {
@@ -268,7 +258,7 @@
         "  \"\"\"\n",
         "\n",
         "  data = np.array([df['lat_rad'], df['long_rad']]).reshape(1, -1)\n",
-        "  dist, pred = neigh_ports.radius_neighbors(data, radius=0.006, sort_results = True) \n",
+        "  dist, pred = neigh_ports.radius_neighbors(data, radius=0.008, sort_results = True) \n",
         "\n",
         "  if len(dist[0]) == 0:\n",
         "    return -1\n",
@@ -276,7 +266,7 @@
         "  else:\n",
         "    return idx_ports[pred[0][0]]"
       ],
-      "execution_count": 11,
+      "execution_count": 126,
       "outputs": []
     },
     {
@@ -291,7 +281,7 @@
         "  \"\"\"\n",
         "  \n",
         "  data = np.array([df['lat_rad'], df['long_rad']]).reshape(1, -1)\n",
-        "  dist, pred = neigh_ports.radius_neighbors(data, radius=0.0075, sort_results = True) \n",
+        "  dist, pred = neigh_ports.radius_neighbors(data, radius=0.0085, sort_results = True) \n",
         "\n",
         "  if len(dist[0]) == 0:\n",
         "    return -1\n",
@@ -299,7 +289,7 @@
         "  else:\n",
         "    return dist[0][0]\n"
       ],
-      "execution_count": 12,
+      "execution_count": 127,
       "outputs": []
     },
     {
@@ -325,7 +315,7 @@
         "  except:\n",
         "    return -99"
       ],
-      "execution_count": 13,
+      "execution_count": 104,
       "outputs": []
     },
     {
@@ -350,7 +340,7 @@
         "df2.loc[mask, 'pred_port'] = df_valid.apply(nearest_port, axis=1)\n",
         "df2.loc[mask, 'pred_dist'] = df_valid.apply(nearest_distance, axis=1)"
       ],
-      "execution_count": 14,
+      "execution_count": 128,
       "outputs": []
     },
     {
@@ -382,7 +372,7 @@
       "source": [
         "df2['pred_port_coords'] = [ports[k] if k in ports else -99 for k in df2['pred_port']]"
       ],
-      "execution_count": 16,
+      "execution_count": 131,
       "outputs": []
     },
     {
@@ -392,76 +382,63 @@
       },
       "source": [
         "def vincenty_port(row):\n",
-        "\n",
-        "  if row['vessel'] != row['vessel_1back']:\n",
-        "    return -99\n",
-        "\n",
         "  try:\n",
-        "    distance = vincenty(row['pred_port_coords'], row['lat_long'])\n",
+        "    distance = vincenty(row['port_coords'], row['lat_long'])\n",
         "    return distance\n",
         "  except:\n",
         "    return -99"
       ],
-      "execution_count": 17,
+      "execution_count": 260,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "anB6U22yqh7n"
+        "id": "TxCo8-h_g9E8"
       },
       "source": [
-        "df2['vindist_pred_port'] = df2.apply(vincenty_port, axis=1)"
+        "def assign_ports(df):\n",
+        "  \"\"\"\n",
+        "  a function that prepares a dataframe for predictions\n",
+        "  \"\"\"\n",
+        "\n",
+        "  # resampling the data to standardize time intervals\n",
+        "  df = df.resample('4H').mean().ffill()\n",
+        "  df['lat_rad'] = df['lat_rad'].resample('4H').median().ffill()\n",
+        "  df['long_rad'] = df['long_rad'].resample('4H').median().ffill()\n",
+        "  \n",
+        "  # applying a mask to limit the rows the predict function is applied to\n",
+        "  mask = df['speed'] <= 3\n",
+        "  df_temp = df[mask]\n",
+        "\n",
+        "  df['pred_port'] = 0\n",
+        "  df.loc[mask, 'pred_port'] = df_temp[mask].apply(nearest_port, axis=1)  \n",
+        "  df['port_coords'] = [list(ports[k]) if k in ports else -99 for k in df['pred_port']]\n",
+        "  \n",
+        "  # applying a mask to limit the rows the vincenty distance func is applied to\n",
+        "  maskb = df['pred_port'] > 0\n",
+        "  df_temp = df[maskb]\n",
+        "  \n",
+        "  df['dist_from_port'] = 0\n",
+        "  df['lat_long'] = [[x,y] for x, y in zip(df['lat'], df['long'])]\n",
+        "  df.loc[maskb, 'dist_from_port'] = df_temp[maskb].apply(vincenty_port, axis=1)\n",
+        "  \n",
+        "  # recasting vessel and pred_port columns as integers\n",
+        "  df[['vessel', 'pred_port']] = df[['vessel', 'pred_port']].astype(int)\n",
+        "\n",
+        "  return df"
       ],
-      "execution_count": 18,
+      "execution_count": 253,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "c9r-lLkn-xPk"
+        "id": "PNurXJQpmPet"
       },
       "source": [
-        "# the next few cells are a deep dive on the ports that aren't visited \n",
-        "\n",
-        "port_60 = [31.6940667, 121.7672667]\n",
-        "port_88 = [21.48393, 109.0811]\n",
-        "port_109 = [35.49415, 139.7681333]\n",
-        "port_113 = [38.45433, 27.1685]\n",
-        "\n",
-        "distances_from_60 = {vessel:vincenty(port_60, d) for vessel, d in zip(df2.index, df2['lat_long'])}\n",
-        "distances_from_88 = {vessel:vincenty(port_88, d) for vessel, d in zip(df2.index, df2['lat_long'])}          # returning a none for some reason - manually delete using loop\n",
-        "distances_from_109 = {vessel:vincenty(port_109, d) for vessel, d in zip(df2.index, df2['lat_long'])}\n",
-        "distances_from_113 = {vessel:vincenty(port_113, d) for vessel, d in zip(df2.index, df2['lat_long'])}\n",
-        "\n",
-        "sorted_60 = sorted(distances_from_60.items(), key = lambda x: x[1], reverse=False)[:10]\n",
-        "# sorted_88 = sorted(distances_from_88.items(), key = lambda x: x[1], reverse=False)[:10]\n",
-        "sorted_109 = sorted(distances_from_109.items(), key = lambda x: x[1], reverse=False)[:10]\n",
-        "sorted_113 = sorted(distances_from_113.items(), key = lambda x: x[1], reverse=False)[:10]"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "5qcMzZ9mPqam"
-      },
-      "source": [
-        "# looking more carefully at the nearest neighbor ports for Japan using vincenty\n",
-        "# distance. 42 doesn't require inclusion.\n",
-        "\n",
-        "japan = df2[df2['pred_port'].isin([109, 51, 65, 30])]\n",
-        "jp_port = japan[japan['pred_port'] == 51]\n",
-        "\n",
-        "port_51 = 35.4700833, 139.7402667\n",
-        "port_65 = 35.4736489, 139.9677229\n",
-        "port_30 = 35.3421341, 139.8226354\n",
-        "\n",
-        "jp_port['dist_109'] = [vincenty(port_109, x) for x in jp_port['lat_long']]\n",
-        "jp_port['dist_51'] = [vincenty(port_51, x) for x in jp_port['lat_long']]\n",
-        "jp_port['dist_65'] = [vincenty(port_65, x) for x in jp_port['lat_long']]\n",
-        "jp_port['dist_30'] = [vincenty(port_30, x) for x in jp_port['lat_long']]"
+        "p = assign_ports(vessel_dfs[4])\n",
+        "p"
       ],
       "execution_count": null,
       "outputs": []
@@ -480,7 +457,7 @@
         "  df_ = df2[df2['vessel'] == vessel]\n",
         "  vessel_dfs[vessel] = df_.set_index('datetime')"
       ],
-      "execution_count": 19,
+      "execution_count": 150,
       "outputs": []
     },
     {
@@ -505,114 +482,122 @@
         "for n in port_ds.keys():\n",
         "  port_ds[n]['vdist_port'] = [vincenty(x, y) for x, y in zip(port_ds[n][f'{n}_coord'], port_ds[n]['lat_long'])]\n"
       ],
-      "execution_count": 20,
+      "execution_count": 177,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NHK2k520aAqs"
+        "id": "gzAcp84JXkAw"
       },
       "source": [
-        "for p in port_ds.keys():\n",
-        "  print(f'{p}:', len(port_ds[p]))"
+        "# calculating the minimum and maximum vincenty distances from ports and \n",
+        "# storing the values in a dictionary. it may prove useful when distinguishing\n",
+        "# between 'in port' and 'waiting around to enter the port'\n",
+        "\n",
+        "port_dist = {}\n",
+        "\n",
+        "for port in port_ds.keys():\n",
+        "  max_vincenty = port_ds[port]['vdist_port'].max()\n",
+        "  min_vincenty = port_ds[port]['vdist_port'].min()\n",
+        "  port_dist[port] = [max_vincenty, min_vincenty]"
       ],
-      "execution_count": null,
+      "execution_count": 178,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Q5uB_-Xoa6Hp"
+        "id": "KMjneZuCUg6C"
       },
       "source": [
-        "for v in vessel_dfs.keys():\n",
-        "  print(f'{v}:', len(vessel_dfs[v]))"
+        "def hanging_around(row):\n",
+        "\n",
+        "  key = int(row['pred_port'])\n",
+        "\n",
+        "  if key < 0:\n",
+        "    return 0\n",
+        "\n",
+        "  from_min = row['vindist_pred_port'] - port_dist[key][1]\n",
+        "\n",
+        "  try:\n",
+        "    if from_min >= 20:\n",
+        "      return 1\n",
+        "    else:\n",
+        "      return 0\n",
+        "\n",
+        "  except:\n",
+        "    return -1"
       ],
-      "execution_count": null,
+      "execution_count": 172,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EWZpaF4Uae3l"
+        "id": "BDnoQ4hnfhce"
       },
       "source": [
-        "# a cell to check distances\n",
+        "def get_voyages(df):\n",
         "\n",
-        "port_63 = ports[63]\n",
-        "d_from_63 = [[v, vincenty(port_63, d)] for v, d in zip(df2['vessel'], df2['lat_long'])]\n",
-        "d63 = pd.DataFrame.from_records(d_from_63, columns = ['vessel', 'distance'])\n",
-        "d63.groupby('vessel')['distance'].min().sort_values().head(30)"
+        "  nz = df[df['pred_port'] > 0].reset_index()\n",
+        "\n",
+        "  vessel = nz['vessel'][0]\n",
+        "  dt = nz['datetime']\n",
+        "  pred = nz['pred_port']\n",
+        "\n",
+        "  records = []\n",
+        "\n",
+        "  for i in range(len(dt)-1):\n",
+        "    if pred[i] != pred[i+1]:\n",
+        "      start_port = pred[i]\n",
+        "      end_port = pred[i+1]\n",
+        "      begin_date = dt[i]\n",
+        "      end_date = dt[i+1]\n",
+        "      records.append([vessel, begin_date, end_date, start_port, end_port])\n",
+        "\n",
+        "  df = pd.DataFrame.from_records(records, columns = ['vessel', 'begin_date', 'end_date', 'begin_port_id', 'end_port_id'])\n",
+        "  \n",
+        "  return df"
       ],
-      "execution_count": null,
+      "execution_count": 179,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Wb11DzNiekDP"
+        "id": "7SIs4v7TvD-a"
       },
       "source": [
-        "maxes = {}\n",
-        "\n",
-        "for n in port_ds.keys():\n",
-        "  max_ = port_ds[n]['vdist_port'].max()\n",
-        "  maxes[n] = max_"
+        "voyages_dict = pd.concat([get_voyages(vessel_dfs[n]) for n in vessel_dfs.keys()])"
       ],
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "msjSsqV-pvqo"
+        "id": "SDe7mIs0-UF2"
       },
       "source": [
-        "mins = {}\n",
-        "\n",
-        "for n in port_ds.keys():\n",
-        "  min_ = port_ds[n]['vdist_port'].min()\n",
-        "  minb = port_ds[n]['pred_dist'].min() * 1000\n",
-        "  mins[n] = (min_, minb)"
+        "resample_52 = vessel_dfs[172].resample('4H').mean().ffill()\n",
+        "resample_52['lat_rad'] = vessel_dfs[172]['lat_rad'].resample('4H').median().ffill()\n",
+        "resample_52['long_rad'] = vessel_dfs[172]['long_rad'].resample('4H').median().ffill()\n",
+        "resample_52['pred_port_resample'] = resample_52.apply(nearest_port, axis = 1)"
       ],
-      "execution_count": null,
+      "execution_count": 198,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NKhz9MX1uIt_"
+        "id": "mLbFGRunvYK8"
       },
       "source": [
-        "df66 = vessel_dfs[99]\n",
-        "\n",
-        "nz = df66[df66['pred_port'] > 0].reset_index()\n",
-        "\n",
-        "dt = nz['datetime']\n",
-        "pred = nz['pred_port']\n",
-        "\n",
-        "records = []\n",
-        "start = 0\n",
-        "\n",
-        "for i in range(len(dt)-1):  \n",
-        "  if pred[i] != pred[i+1]:\n",
-        "    record = [nz.vessel[i], dt[start], pred[i], dt[i], nz.vindist_pred_port[i]]\n",
-        "    start = i+1\n",
-        "    records.append(record)"
+        "df3 = voyages_dict\n",
+        "df3['len_voyage'] = df3['end_date'] - df3['begin_date']"
       ],
-      "execution_count": 48,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "J3fWMDu32dm3"
-      },
-      "source": [
-        "pd.DataFrame.from_records(records, columns = ['vessel', 'start', 'port', 'end', 'vidst'])"
-      ],
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": []
     },
     {
