--- a/sym_cargo.ipynb
+++ b/sym_cargo.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1bTzsC2_o8Jg772hCJWDRqrHnkqeQuRQx",
-      "authorship_tag": "ABX9TyMFbvkGvo20F1tb3RYOy1L9",
+      "authorship_tag": "ABX9TyOiO/DCVcnba8SC0lyXNKSo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -116,17 +116,6 @@
         "  df2['delta_hours'] = df2.groupby('vessel')['time_delta'].transform(lambda x: [(n.seconds/3600) + (n.days *24) for n in x])\n",
         "  df2 = df2.drop(columns=['time_delta'])\n",
         "\n",
-        "  # speed and heading back\n",
-        "  df2['speed_diff_2back'] = df2.groupby('vessel')['speed'].transform(lambda x: x.diff(2))\n",
-        "  df2['speed_diff_1back'] = df2.groupby('vessel')['speed'].transform(lambda x: x.diff(1))\n",
-        "  df2['speed_diff_1ahead'] = df2.groupby('vessel')['speed'].transform(lambda x: x.diff(-1))\n",
-        "  df2['speed_diff_2ahead'] = df2.groupby('vessel')['speed'].transform(lambda x: x.diff(-2))\n",
-        "  df2['heading_diff_2back'] = df2.groupby('vessel')['heading'].transform(lambda x: x.diff(2))\n",
-        "  df2['heading_diff_1back'] = df2.groupby('vessel')['heading'].transform(lambda x: x.diff(1))\n",
-        "  df2['heading_diff_1ahead'] = df2.groupby('vessel')['heading'].transform(lambda x: x.diff(-1))\n",
-        "  df2['heading_diff_2ahead'] = df2.groupby('vessel')['heading'].transform(lambda x: x.diff(-2))\n",
-        "  \n",
-        "  df2['vessel_1back'] = df2['vessel'].shift(1)\n",
         "  df2 = df2.reset_index(drop=True)\n",
         "\n",
         "  return df1, df2"
@@ -198,28 +187,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Cpwibksbwbcw"
-      },
-      "source": [
-        "# using set differences i noticed two ports (42, 113) were never being assigned,\n",
-        "# so i used vincenty distance to figure out what was going on. since the lat/long\n",
-        "# of where the boats are docked are, in both cases, much closer to the port\n",
-        "# assigned by the model, i cannot justify any change\n",
-        "\n",
-        "coord_first_stop = (38.743843, 26.895678)               \n",
-        "coord_second_stop = (38.821700, 26.913800)\n",
-        "\n",
-        "viable_ports = [82, 113]\n",
-        "\n",
-        "vin_one = {f'port{a}':[vincenty(ports[a], coord_first_stop)] for a in viable_ports}\n",
-        "vin_two = {f'port{a}':[vincenty(ports[a], coord_second_stop)] for a in viable_ports}"
-      ],
-      "execution_count": 122,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -321,63 +288,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EMT41MClrwtI"
-      },
-      "source": [
-        "# using my simple neighbor model with haversine distance to assign the closest \n",
-        "# port along with its distance to the dataframe. i used a mask to speed up\n",
-        "# the process\n",
-        "\n",
-        "mask = ((df2['speed'] <= 0.2) & \\\n",
-        "        ((abs(df2['heading_diff_1back'] <= 2)) & (abs(df2['heading_diff_2back'] <=2)) | \\\n",
-        "         (abs(df2['heading_diff_1ahead'] <=2)) & (abs(df2['heading_diff_2ahead'] <=2)))\n",
-        ")\n",
-        "  \n",
-        "df_valid = df2[mask]\n",
-        "\n",
-        "df2['pred_port'] = -1\n",
-        "df2['pred_dist'] = -1\n",
-        "df2.loc[mask, 'pred_port'] = df_valid.apply(nearest_port, axis=1)\n",
-        "df2.loc[mask, 'pred_dist'] = df_valid.apply(nearest_distance, axis=1)"
-      ],
-      "execution_count": 128,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "nMGp_rhLvd98"
-      },
-      "source": [
-        "# calculating the vincenty distances between each row in the dataframe to\n",
-        "# detect movement. this seems like it might allow me to more easily detect when\n",
-        "# a ship is in japanese (and other?) ports where they appear to unload/load \n",
-        "# without zero movement \n",
-        "\n",
-        "vin_mask = df2['speed'] <= 1\n",
-        "\n",
-        "df_vin = df2[vin_mask]\n",
-        "\n",
-        "df2['vin_delta'] = -99\n",
-        "df2.loc[vin_mask, 'vin_delta'] = df_vin.apply(vincent_distance, axis=1)"
-      ],
-      "execution_count": 15,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9x7VsH7OpoEY"
-      },
-      "source": [
-        "df2['pred_port_coords'] = [ports[k] if k in ports else -99 for k in df2['pred_port']]"
-      ],
-      "execution_count": 131,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "KoYZuM6lqJIa"
       },
       "source": [
@@ -416,12 +326,12 @@
         "  df['port_coords'] = [list(ports[k]) if k in ports else -99 for k in df['pred_port']]\n",
         "  \n",
         "  # applying a mask to limit the rows the vincenty distance func is applied to\n",
-        "  maskb = df['pred_port'] > 0\n",
-        "  df_temp = df[maskb]\n",
+        "  vin_mask = df['pred_port'] > 0\n",
+        "  vin_temp = df[vin_mask]\n",
         "  \n",
         "  df['dist_from_port'] = 0\n",
         "  df['lat_long'] = [[x,y] for x, y in zip(df['lat'], df['long'])]\n",
-        "  df.loc[maskb, 'dist_from_port'] = df_temp[maskb].apply(vincenty_port, axis=1)\n",
+        "  df.loc[vin_mask, 'dist_from_port'] = vin_temp[vin_mask].apply(vincenty_port, axis=1)\n",
         "  \n",
         "  # recasting vessel and pred_port columns as integers\n",
         "  df[['vessel', 'pred_port']] = df[['vessel', 'pred_port']].astype(int)\n",
@@ -437,8 +347,7 @@
         "id": "PNurXJQpmPet"
       },
       "source": [
-        "p = assign_ports(vessel_dfs[4])\n",
-        "p"
+        "p = assign_ports(vessel_dfs[4])"
       ],
       "execution_count": null,
       "outputs": []
@@ -572,20 +481,6 @@
         "voyages_dict = pd.concat([get_voyages(vessel_dfs[n]) for n in vessel_dfs.keys()])"
       ],
       "execution_count": 44,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "SDe7mIs0-UF2"
-      },
-      "source": [
-        "resample_52 = vessel_dfs[172].resample('4H').mean().ffill()\n",
-        "resample_52['lat_rad'] = vessel_dfs[172]['lat_rad'].resample('4H').median().ffill()\n",
-        "resample_52['long_rad'] = vessel_dfs[172]['long_rad'].resample('4H').median().ffill()\n",
-        "resample_52['pred_port_resample'] = resample_52.apply(nearest_port, axis = 1)"
-      ],
-      "execution_count": 198,
       "outputs": []
     },
     {
