--- a/sym_cargo.ipynb
+++ b/sym_cargo.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1bTzsC2_o8Jg772hCJWDRqrHnkqeQuRQx",
-      "authorship_tag": "ABX9TyOHk5ntLYl1YB3YYsDbLq1a",
+      "authorship_tag": "ABX9TyMydWqXYNzuNr60SUIIi3u5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -403,7 +403,8 @@
         "  df['port_dist'] = 0\n",
         "  df.loc[vin_mask, 'port_dist'] = vin_temp.apply(vincenty_port, axis=1)\n",
         "\n",
-        "  # eliminating entries where the \n",
+        "  # eliminating entries in sequences where max distance differs too much from min\n",
+        "  # tends to indicate 'waiting to enter port'\n",
         "  df['seq'] = df['pred_port'].diff().ne(0).cumsum()\n",
         "  df['dist_diff'] = df.groupby('seq')['port_dist'].transform(lambda x: x - x.min())\n",
         "  df['pred_port'] = np.where(df['dist_diff'] >= 15, 0, df['pred_port'])\n",
@@ -414,7 +415,7 @@
         "\n",
         "  return df"
       ],
-      "execution_count": 237,
+      "execution_count": 265,
       "outputs": []
     },
     {
@@ -434,7 +435,7 @@
         "# assigning ports to each dataframe\n",
         "processed_dfs = {f'vessel_{key}':assign_ports(vessel_dfs[key]) for key in vessel_dfs.keys()}"
       ],
-      "execution_count": 241,
+      "execution_count": 266,
       "outputs": []
     },
     {
@@ -510,9 +511,8 @@
         "id": "n7T5EmrWQzPC"
       },
       "source": [
-        "df = processed_dfs['vessel_160']\n",
-        "df['consec'] = df.groupby('exper')['pred_port'].transform('count')\n",
-        "print(df[['consec', 'exper', 'speed', 'heading', 'pred_port', 'speed', 'port_dist']].to_string())"
+        "df = processed_dfs['vessel_103']\n",
+        "print(df[['speed', 'pred_port', 'port_dist', 'seq', 'dist_diff', 'lat_long']].to_string())"
       ],
       "execution_count": null,
       "outputs": []
