--- a/sym_cargo.ipynb
+++ b/sym_cargo.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1bTzsC2_o8Jg772hCJWDRqrHnkqeQuRQx",
-      "authorship_tag": "ABX9TyMJewCmV2gGzpXuMXYCI84g",
+      "authorship_tag": "ABX9TyNUc1mNXKcyDQJ/W+3IB7pO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1013,15 +1013,18 @@
         "id": "kOqRO78LoVr6"
       },
       "source": [
-        "f = pd.concat([first_port, second_port, alt_second, third_port, alt_third], axis=1)\n",
+        "\n",
+        "last_port = pd.Series(seq_for_pred[:,-1])\n",
+        "f = pd.concat([last_port, first_port, second_port, alt_second, third_port, alt_third], axis=1)\n",
         "f.index = window_data.keys()\n",
         "f = f.reset_index()\n",
-        "f.columns = ['vessel', 'pred1', 'pred2', 'alt2', 'pred3', 'alt3']\n",
+        "f.columns = ['vessel', 'last_port', 'pred1', 'pred2', 'alt2', 'pred3', 'alt3']\n",
         "f['pred2'] = np.where(f['pred1'] == f['pred2'], f['alt2'], f['pred2'])\n",
         "f['pred3'] = np.where(f['pred2'] == f['pred3'], f['alt3'], f['pred3'])\n",
+        "f['last_port'] = pd.Series(seq_for_pred[:,-1])\n",
         "f.drop(columns=['alt2', 'alt3'], inplace=True)"
       ],
-      "execution_count": 196,
+      "execution_count": 204,
       "outputs": []
     },
     {
@@ -1029,15 +1032,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 203
+          "height": 142
         },
         "id": "zPZZ6EX_ANdP",
-        "outputId": "be1581bf-d5f1-410e-bc10-01cd4a496f2e"
+        "outputId": "7edd056c-5cb8-4400-f94e-b30fdedaf9cd"
       },
       "source": [
-        "f.head(5)"
+        "f.head(3)                             # what's with the 91s?"
       ],
-      "execution_count": 197,
+      "execution_count": 207,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1062,6 +1065,7 @@
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
               "      <th>vessel</th>\n",
+              "      <th>last_port</th>\n",
               "      <th>pred1</th>\n",
               "      <th>pred2</th>\n",
               "      <th>pred3</th>\n",
@@ -1071,6 +1075,7 @@
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>1</td>\n",
+              "      <td>92</td>\n",
               "      <td>91</td>\n",
               "      <td>138</td>\n",
               "      <td>91</td>\n",
@@ -1078,6 +1083,7 @@
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>2</td>\n",
+              "      <td>36</td>\n",
               "      <td>91</td>\n",
               "      <td>57</td>\n",
               "      <td>138</td>\n",
@@ -1085,41 +1091,26 @@
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>3</td>\n",
+              "      <td>13</td>\n",
               "      <td>57</td>\n",
               "      <td>149</td>\n",
               "      <td>75</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>4</td>\n",
-              "      <td>91</td>\n",
-              "      <td>57</td>\n",
-              "      <td>16</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>5</td>\n",
-              "      <td>57</td>\n",
-              "      <td>75</td>\n",
-              "      <td>57</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "   vessel  pred1  pred2  pred3\n",
-              "0       1     91    138     91\n",
-              "1       2     91     57    138\n",
-              "2       3     57    149     75\n",
-              "3       4     91     57     16\n",
-              "4       5     57     75     57"
+              "   vessel  last_port  pred1  pred2  pred3\n",
+              "0       1         92     91    138     91\n",
+              "1       2         36     91     57    138\n",
+              "2       3         13     57    149     75"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 197
+          "execution_count": 207
         }
       ]
     },
