--- a/sym_cargo.ipynb
+++ b/sym_cargo.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1bTzsC2_o8Jg772hCJWDRqrHnkqeQuRQx",
-      "authorship_tag": "ABX9TyNUc1mNXKcyDQJ/W+3IB7pO",
+      "authorship_tag": "ABX9TyNHq2wQadlvIWE9nPla7hbN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
         "!pip install plotly-express --quiet\n",
         "!pip install vincenty --quiet"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -47,7 +47,7 @@
         "id": "xrMMphhGyTIp"
       },
       "source": [
-        "I'll clean up this repo and provide visualizations and the requirements.txt file later this week. \n"
+        "I'll clean up this repo and provide visualizations. I also want to figure out how to get an LSTM model working with multiple embeddings. Trying things out as I learn.\n"
       ]
     },
     {
@@ -72,7 +72,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "import plotly_express as px"
       ],
-      "execution_count": 192,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -84,7 +84,7 @@
         "port_file = '/content/drive/MyDrive/Ports/ports.csv'\n",
         "tracking_file = '/content/drive/MyDrive/Ports/tracking.csv'"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -128,7 +128,7 @@
         "\n",
         "  return df1, df2"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -139,7 +139,7 @@
       "source": [
         "df1, df2 = wrangle()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -166,7 +166,7 @@
         "  except:\n",
         "    return -99"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -175,7 +175,7 @@
         "id": "B1P_JxyybKHc"
       },
       "source": [
-        "# creating a dictionary of ports with their lat and longs - will be used to\n",
+        "# creating a dictionary of ports with their lat and longs - will be used\n",
         "# repeatedly to explore data and assign values\n",
         "\n",
         "ports = {port:(lat, long) for port, lat, long in zip(df1['port'], df1['lat'], df1['long'])}\n",
@@ -183,7 +183,7 @@
         "# a dictionary to retrieve the port id from the index\n",
         "idx_ports = {idx:port for idx, port in zip(df1.index, df1.port)}"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -211,7 +211,7 @@
         "print(dist[0] * 6370)\n",
         "print([idx_ports[n] for n in n[0]])"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -244,7 +244,7 @@
         "  else:\n",
         "    return idx_ports[pred[0][0]]"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -267,7 +267,7 @@
         "  else:\n",
         "    return dist[0][0]"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -285,7 +285,7 @@
         "  loc = row['lat_long']\n",
         "  return vincenty(port, loc)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -316,7 +316,7 @@
         "\n",
         "  return db.labels_"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -329,7 +329,7 @@
         "df1['labels'] = train_dbscan()\n",
         "db_labels = {port:cluster for port, cluster in zip(df1['port'], df1['labels'])}"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -397,7 +397,7 @@
         "\n",
         "  return df"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -441,7 +441,7 @@
         "  \n",
         "  return df"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -484,7 +484,7 @@
         "\n",
         "  return df"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -502,7 +502,7 @@
         "df2['vin_per_hour'] = df2['vin_diff'] / df2['hour_delta']\n",
         "df2 = df2.query('vin_per_hour <= 50')"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -522,7 +522,7 @@
         "# assigning ports to each dataframe\n",
         "processed_dfs = {key:assign_ports(vessel_dfs[key]) for key in vessel_dfs.keys()}"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -533,7 +533,7 @@
       "source": [
         "alldf = pd.concat(processed_dfs[key] for key in processed_dfs.keys())"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -559,7 +559,7 @@
         "  draft_max = ports_dfs[df].query('sum_draft >=1').port_dist.max()\n",
         "  min_max[df] = [ports_dfs[df]['port_dist'].max(), ports_dfs[df]['port_dist'].min(), draft_max]"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -576,7 +576,7 @@
         "# voyages_df['end_coords'] = [ports[key] for key in voyages_df['end_port_id']]\n",
         "# voyages_df['voyage_dist'] = [vincenty(x, y) for x, y in zip(voyages_df['begin_coords'], voyages_df['end_coords'])]"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -592,7 +592,7 @@
       "source": [
         "voyages_df.head(3)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -717,7 +717,7 @@
         "  \n",
         "  return df.astype(int)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -728,7 +728,7 @@
       "source": [
         "model_df = pd.concat([prepare_data(processed_dfs[key], 6) for key in processed_dfs.keys()])"
       ],
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -770,7 +770,7 @@
         "  \n",
         "  return grid_result"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -803,7 +803,7 @@
         "\n",
         "  return ports_[-n_input:]"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -816,7 +816,7 @@
         "\n",
         "window_data = {key:get_pred_data(processed_dfs[key], n_input=6) for key in processed_dfs.keys()}"
       ],
-      "execution_count": 147,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -922,7 +922,7 @@
       "source": [
         "encoder = {key:value for key, value in zip(df1['port'], df1.index)}"
       ],
-      "execution_count": 148,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -989,7 +989,7 @@
         "seq_for_pred = pad_sequences(seq_for_pred, maxlen=6, value=0)\n",
         "preds = model.predict(seq_for_pred)"
       ],
-      "execution_count": 158,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1004,7 +1004,7 @@
         "third_port = pd.Series([np.argmax(n[2]) for n in preds])\n",
         "alt_third = pd.Series([np.argsort(n[2])[-2] for n in preds])"
       ],
-      "execution_count": 159,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1015,16 +1015,15 @@
       "source": [
         "\n",
         "last_port = pd.Series(seq_for_pred[:,-1])\n",
-        "f = pd.concat([last_port, first_port, second_port, alt_second, third_port, alt_third], axis=1)\n",
-        "f.index = window_data.keys()\n",
-        "f = f.reset_index()\n",
-        "f.columns = ['vessel', 'last_port', 'pred1', 'pred2', 'alt2', 'pred3', 'alt3']\n",
-        "f['pred2'] = np.where(f['pred1'] == f['pred2'], f['alt2'], f['pred2'])\n",
-        "f['pred3'] = np.where(f['pred2'] == f['pred3'], f['alt3'], f['pred3'])\n",
-        "f['last_port'] = pd.Series(seq_for_pred[:,-1])\n",
-        "f.drop(columns=['alt2', 'alt3'], inplace=True)"
+        "lstm_pred = pd.concat([last_port, first_port, second_port, alt_second, third_port, alt_third], axis=1)\n",
+        "lstm_pred.index = window_data.keys()\n",
+        "lstm_pred = lstm_pred.reset_index()\n",
+        "lstm_pred.columns = ['vessel', 'last_port', 'pred1', 'pred2', 'alt2', 'pred3', 'alt3']\n",
+        "lstm_pred['pred2'] = np.where(lstm_pred['pred1'] == lstm_pred['pred2'], lstm_pred['alt2'], f['pred2'])\n",
+        "lstm_pred['pred3'] = np.where(lstm_pred['pred2'] == lstm_pred['pred3'], lstm_pred['alt3'], lstm_pred['pred3'])\n",
+        "lstm_pred.drop(columns=['alt2', 'alt3'], inplace=True)"
       ],
-      "execution_count": 204,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1038,9 +1037,9 @@
         "outputId": "7edd056c-5cb8-4400-f94e-b30fdedaf9cd"
       },
       "source": [
-        "f.head(3)                             # what's with the 91s?"
+        "lstm_pred.head(3)                             # what's with the 91s?"
       ],
-      "execution_count": 207,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
