--- a/sym_cargo.ipynb
+++ b/sym_cargo.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1bTzsC2_o8Jg772hCJWDRqrHnkqeQuRQx",
-      "authorship_tag": "ABX9TyNHq2wQadlvIWE9nPla7hbN",
+      "authorship_tag": "ABX9TyMeWCMRFohjaxr19lSCajhA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,6 +39,17 @@
         "!pip install vincenty --quiet"
       ],
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0M5J6bV0HQAk"
+      },
+      "source": [
+        "!pip freeze > requirements.txt"
+      ],
+      "execution_count": 209,
       "outputs": []
     },
     {
